--- a/example/src/index.html
+++ b/example/src/index.html
@@ -2,10 +2,13 @@
 <head>
 	<title>nanoleaf-layout</title>
 	<link rel="stylesheet" href="example.css">
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
 </head>
 <body>
 	<div class="container">
-		<h1>nanoleaf-layout</h1>
+		<h1>Nanoleaf Layout Demo</h1>
 		<h2><a href="https://github.com/cbartram/nanoleaf-layout">View project on GitHub</a></h2>
 		<!-- the example app is rendered into this div -->
 		<div id="app"></div>
@@ -17,6 +20,9 @@
 			Copyright &copy; 2017 Christian Bartram.
 		</div>
 	</div>
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<script src="common.js"></script>
 	<script src="bundle.js"></script>
 	<script src="example.js"></script>
