Added thorough example bug fixes

--- a/example/src/index.html
+++ b/example/src/index.html
@@ -13,7 +13,7 @@
 		<!-- the example app is rendered into this div -->
 		<div id="app"></div>
 		<div class="hint">
-			Hint: You can use the box to the left to change the panel values and see the react component update in real time!
+			Hint: You can use the box to above to change the panel values and see the nanoleaf layout component update in real time!
 			<!-- put any hints about your component example here -->
 		</div>
 		<div class="footer">
