Added stroke width various bug fixes

--- a/index.html
+++ b/index.html
@@ -29,5 +29,5 @@
 	<script>hljs.initHighlightingOnLoad();</script>
 	<script src="./docs/dist/common.js"></script>
 	<script src="./docs/dist/bundle.js"></script>
-	<script src="./docs/example.js"></script>
+	<script src="docs/dist/example.js"></script>
 </body>
